# rust-license

./: Cargo.toml  README.md  rust-license.yaml
src/: check.rs  check_test.txt  config.rs  config_test.yaml  errors.rs  licenser.rs  main.rs
src/test_files/: with_header_1.txt
